--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,6 +65,9 @@ input[type="submit"] {
     width: 100%;
     height: 35px;
     border-radius: 0px;
+    display: grid;
+    grid-template-rows: 50px, 50px;
+    grid-auto-rows: auto;
     /* color: #eee; */
     
   }
